--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,24 @@
-include.path=${php.global.include.path}
+auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_create_2e_tests=false
+auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_enabled=false
+auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_path=
+auxiliary.org-netbeans-modules-php-phpunit.configuration_2e_enabled=false
+auxiliary.org-netbeans-modules-php-phpunit.configuration_2e_path=
+auxiliary.org-netbeans-modules-php-phpunit.customSuite_2e_enabled=false
+auxiliary.org-netbeans-modules-php-phpunit.customSuite_2e_path=
+auxiliary.org-netbeans-modules-php-phpunit.phpUnit_2e_enabled=true
+auxiliary.org-netbeans-modules-php-phpunit.phpUnit_2e_path=vendor/bin/phpunit
+auxiliary.org-netbeans-modules-php-phpunit.test_2e_groups_2e_ask=false
+auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_all=false
+auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_phpunit_2e_only=false
+file.reference.fb-fb-api-php=.
+include.path=\
+    ${php.global.include.path}:\
+    ${file.reference.fb-fb-api-php}
 php.version=PHP_73
 source.encoding=UTF-8
-src.dir=.
+src.dir=src
 tags.asp=false
 tags.short=false
+test.src.dir=tests
+testing.providers=PhpUnit
 web.root=.
