--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "facturabilidad/cfdis",
     "type": "library",
-    "description": "Client library for Google APIs",
+    "description": "Client library for Facturabilidad APIs",
     "keywords": ["cfdi", "facturacion", "facturabilidad"],
     "homepage": "https://api.facturabilidad.com/?php",
     "license": "Apache-2.0",
